rix1dotdev: make image responsive and fix blurry blob spinning

--- a/apps/rix1.dev-lume/globals.css
+++ b/apps/rix1.dev-lume/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --scale-timing: 0.15s;
+  --image-size: 280px;
+}
+
 html,
 body {
   padding: 0;
@@ -41,9 +46,8 @@ a:not(.clear) {
 }
 
 #blobby-avatar {
-  width: 400px;
-  height: 400px;
-  padding: 1rem;
+  width: var(--image-size);
+  height: var(--image-size);
 
   background-image: url(https://s3.eu-north-1.amazonaws.com/rix1.dev/first-thursday-450x450.jpg);
   background-size: contain;
@@ -56,7 +60,7 @@ a:not(.clear) {
   animation-iteration-count: infinite;
 
   mask-image: url(assets/blob.svg);
-  mask-size: 400px;
+  mask-size: var(--image-size);
   mask-repeat: no-repeat;
   mask-position: center;
 }
@@ -74,8 +78,8 @@ a:not(.clear) {
 }
 
 #blur {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   position: fixed;
@@ -85,59 +89,66 @@ a:not(.clear) {
 
 #blob {
   position: absolute;
-  inset: 10% 10%;
+  inset: 10% 22%;
   background: linear-gradient(135deg, #00eaff, #ff00ab, #ff7b00);
   opacity: 0.7;
   border-radius: 50%;
   z-index: -10;
-  animation: move 12.5s linear infinite;
+  animation: move 8s linear infinite, rotate 12s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
 
 @keyframes move {
   0% {
-    transform: translateX(0) rotate(0deg);
+    transform: translateY(0rem);
     border-radius: 50%;
   }
   25% {
-    transform: translateX(2rem) rotate(-90deg);
     border-radius: 40% 60% 50% 50% / 60% 40% 60% 40%;
   }
   50% {
-    transform: translateX(-2rem) rotate(-180deg);
+    transform: translateY(1rem);
     border-radius: 50% 50% 40% 60% / 40% 60% 40% 60%;
   }
   75% {
-    transform: translateX(0rem) rotate(-270deg);
     border-radius: 40% 60% 50% 50% / 60% 40% 60% 40%;
   }
   100% {
-    transform: translateX(0) rotate(0deg);
+    transform: translateY(0rem);
     border-radius: 50%;
   }
 }
 
-/* blob and have data-attribute data-pos */
-[data-pos="top-right"] {
-  bottom: -120px;
-  left: 20vw;
+[data-pos="center"] {
+  top: -50px;
+  left: calc(50% - 100px);
   min-width: 200px;
   min-height: 200px;
-  width: 20%;
-  height: 20%;
   position: absolute;
   pointer-events: none;
 }
 
+[data-pos="center"] > #blob {
+  inset: 0 0;
+}
+
 .share-icons > a > svg {
-  /* fill: transparent; */
-  transition: all 0.3s ease-out;
+  transition: all var(--scale-timing) ease-out;
 }
 
 .share-icons > a > small {
   opacity: 0;
   transform: scale(0.5) translateY(-0.5rem);
   color: #db2777;
-  transition: all 0.3s ease-out;
+  transition: all var(--scale-timing) ease-out;
   font-size: 12px;
 }
 
@@ -149,19 +160,19 @@ a:not(.clear) {
 .share-icons > a:hover > small {
   opacity: 1;
   transform: scale(1) translateY(0);
-  transition: all 0.3s ease-out;
+  transition: all var(--scale-timing) ease-out;
 }
 
 .share-icons > a:hover > svg[stroke] {
-  --timing: 0.3s;
   transform: scale(1.2) translateY(-0.5rem);
   stroke: #db2777;
-  transition: fill var(--timing) ease-out, transform var(--timing) ease-out;
+  transition: fill var(--scale-timing) ease-out,
+    transform var(--scale-timing) ease-out;
 }
 
 .share-icons > a:hover > svg:not([stroke]) {
-  --timing: 0.3s;
   transform: scale(1.2) translateY(-0.5rem);
   fill: #db2777;
-  transition: fill var(--timing) ease-out, transform var(--timing) ease-out;
+  transition: fill var(--scale-timing) ease-out,
+    transform var(--scale-timing) ease-out;
 }
